--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/styled-components": "^5.1.26"
   }
 }
