--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-masonry-css": "^1.0.16",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
