--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.11",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-masonry-css": "^1.0.16",
